# LMS_scypro

./: .coverage  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  payments_data.json  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_lesson_course_payments.py  0003_delete_payments.py  0004_payments.py  0005_alter_payments_options.py  0006_course_author_lesson_author.py  0007_alter_course_title_alter_lesson_link_and_more.py  0008_subscription.py  0009_course_updated_at.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_city_alter_user_phone_number.py
